<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".fragments.ManualAdjustFragment"
    tools:layout_editor_absoluteY="81dp">


    <SeekBar
        android:id="@+id/seekBarRed"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/redValueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redvalue"
        android:textAlignment="center"
        android:textColor="@color/test"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/blueValueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluevalue"
        android:textAlignment="center"
        android:textColor="@color/test"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="72dp" />

    <TextView
        android:id="@+id/alphaValueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alphavalue"
        android:textAlignment="textStart"
        android:textColor="@color/test"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radiobutton0" />

        <RadioButton
            android:id="@+id/radioButton25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton25" />

        <RadioButton
            android:id="@+id/radioButton50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton50" />

        <RadioButton
            android:id="@+id/radioButton75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton75" />
    </RadioGroup>

</LinearLayout>